# Copyright (c) Martin Schweiger
# Licensed under the MIT License

add_subdirectory(Sol)
add_subdirectory(Vsop87)
add_subdirectory(Moon)
add_subdirectory(Phobos)
add_subdirectory(Deimos)
add_subdirectory(Vesta)
add_subdirectory(Galsat)
add_subdirectory(Satsat)
add_subdirectory(Miranda)
add_subdirectory(Ariel)
add_subdirectory(Umbriel)
add_subdirectory(Titania)
add_subdirectory(Oberon)
add_subdirectory(Triton)
add_subdirectory(Proteus)
add_subdirectory(Nereid)
